# Toolkit

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  Toolkit.h.in
src/Filesystem/: filesystem_ex.cpp  filesystem_ex.h
src/Json/: json.cpp  json.h  json_parser.cpp  json_parser.h
src/String/: string_ex.cpp  string_ex.h
